objects/MDTF_Lead_Generation_Fee__c.object
<CustomObject>
    <description>MDTF((Marketing Development and Training Funds) Lead Generation Fees information is stored in this object which needs to be displayed in Dealer Public Finds Report</description>
    <fields>
        <fullName>ACBParanet_ID__c</fullName>
        <description>Populated by Informatica, Matching with the same field of Opportunity.</description>
        <label>ACBParanet ID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <description>Only used for the integration process.Populated by Informatica, Matching with the same field of Campaign.</description>
        <label>Campaign Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>Only used for the integration process.Populated by Informatica, Matching with the same field of Campaign.</description>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Populated by Informatica. Matching same created Date of Opportunity</description>
        <label>Opportunity Created Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Generation_Fee__c</fullName>
        <description>Only used for the integration process.Populated by Informatica, Matching with the same field of Campaign.</description>
        <label>Lead Generation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Handling_Fee__c</fullName>
        <description>Only used for the integration process.Populated by Informatica, Matching with the same field of Campaign.</description>
        <label>Lead Handling Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>External Id. Should be populated by Informatica.</description>
        <externalId>true</externalId>
        <label>Opportunity Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Only used for the integration process.Populated by Informatica, Matching with the same field of Opportunity.</description>
        <label>Opportunity Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Id__c</fullName>
        <description>Account Id for Partner Account. Populated by Informatica.</description>
        <label>Partner Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Lead_Generation_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Resend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be checked when User wants to resend the record to Informatica/ACB for further processing if Error occured in previous Transaction.</description>
        <label>Resend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <description>Success/Failure Message comes From Informatica/ACB.</description>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Success/Failure Status for data transfer.</description>
        <label>Status</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Only used for the integration process.Populated by Informatica.</description>
        <label>Transaction Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>MDTF Lead Generation Fee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACBParanet_ID__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Partner_Account_Id__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Lead_Generation_Fee__c</columns>
        <columns>Lead_Handling_Fee__c</columns>
        <columns>Reference_Number__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Failed_Transaction</fullName>
        <columns>Resend__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>ACBParanet_ID__c</columns>
        <columns>Partner_Account_Id__c</columns>
        <columns>Lead_Generation_Fee__c</columns>
        <columns>Lead_Handling_Fee__c</columns>
        <columns>Reference_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Fail</value>
        </filters>
        <label>Failed Transaction</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MDTF Lead Generation Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDTF Lead Generation Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>